[features]
default = ["lunanet-dtn"]
fixed_site = ["high_speed_srio", "ceph_storage", "pqc_encryption"]
rover = ["power_management", "rad_hard_tmr", "low_latency_radio"]


[dependencies]
wolfssl-sys = { version = "1.0", features = ["fips", "zynq-acceleration"] }

use wolfssl_sys as wolf;
use std::net::TcpStream;
use std::os::unix::io::AsRawFd;

pub struct LunarSecureChannel {
    ssl: *mut wolf::WOLFSSL,
}

impl LunarSecureChannel {
    /// Create a new FIPS-validated session over a veth link
    pub fn connect_to_hub(stream: TcpStream) -> Result<Self, String> {
        unsafe {
            // 1. Initialize wolfSSL with FIPS mode
            if wolf::wolfSSL_Init() != wolf::WOLFSSL_SUCCESS {
                return Err("Failed to initialize wolfSSL".into());
            }

            // 2. Use TLS 1.3 (Modern standard for Lunanet)
            let method = wolf::wolfTLSv1_3_client_method();
            let ctx = wolf::wolfSSL_CTX_new(method);

            // 3. FORCE FIPS 140-3 Mode 
            // This ensures only Zynq-accelerated, validated algorithms are used
            if wolf::wolfcrypt_FIPS_ready() != 0 {
                println!("[FIPS] Zynq Hardware Crypto Engine Verified.");
            }

            // 4. Create the SSL object and bind to the TCP stream
            let ssl = wolf::wolfSSL_new(ctx);
            let fd = stream.as_raw_fd();
            wolf::wolfSSL_set_fd(ssl, fd);

            // 5. Perform the Handshake
            // This uses the TCXO-backed clock for timestamp verification
            if wolf::wolfSSL_connect(ssl) != wolf::WOLFSSL_SUCCESS {
                let err = wolf::wolfSSL_get_error(ssl, 0);
                return Err(format!("Handshake failed: Error {}", err));
            }

            println!("[SUCCESS] Secure Channel Established over Virtual Cable.");
            Ok(Self { ssl })
        }
    }

    /// Send Oxygen Harvesting logs securely
    pub fn send_manifest(&self, data: &[u8]) {
        unsafe {
            wolf::wolfSSL_write(
                self.ssl, 
                data.as_ptr() as *const _, 
                data.len() as i32
            );
        }
    }
}
